--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 license = {text = "MIT"}
 requires-python = "3.14"
 dependencies = [
-    "django (>=6.0.2,<7.0.0)"
+    "django (>=6.0.2,<7.0.0)",
+    "djangorestframework (>=3.16.1,<4.0.0)"
 ]
 
 
